--- a/U2_A_A10jesuslb/app/src/main/res/layout-land/activity_u2__a__a10jesuslb.xml
+++ b/U2_A_A10jesuslb/app/src/main/res/layout-land/activity_u2__a__a10jesuslb.xml
@@ -1,86 +1,87 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".U2_A_A10jesuslb">
+    tools:context=".U2_A_A10jesuslb">
 
     <EditText
         android:id="@+id/txtEdi"
-        android:inputType="textWebEditText"
-        android:imeOptions="actionDone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/green"
         android:hint="@string/text_hint"
+        android:imeOptions="actionDone"
+        android:inputType="textWebEditText"
         />
     <CheckBox
         android:id="@+id/ckBox"
-        android:layout_below="@id/txtEdi"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@id/txtEdi"
         android:text="@string/text_clear"
         />
     
     <Button
         android:id="@+id/btnAdd"
-        android:layout_below="@id/ckBox"
-        android:layout_centerHorizontal="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/text_button"
+        android:layout_below="@id/ckBox"
+        android:layout_centerHorizontal="true"
         android:onClick="agrega"
+        android:text="@string/text_button"
         />
     <TextView
         android:id="@+id/txtLabel"
-        android:layout_below="@id/btnAdd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/red"
+        android:layout_below="@id/btnAdd"
         android:text="@string/text_label"
+        android:textColor="@color/red"
         />
 
     <RadioButton
         android:id="@+id/rtbRed"
-        android:layout_below="@id/txtLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/text_red"
-        android:onClick="radios"
+        android:layout_below="@id/txtLabel"
         android:checked="true"
+        android:onClick="radios"
+        android:text="@string/text_red"
         />
     <RadioButton
-        android:layout_below="@id/txtLabel"
         android:id="@+id/rtbBlue"
-        android:layout_centerHorizontal="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/text_blue"
+        android:layout_below="@id/txtLabel"
+        android:layout_centerHorizontal="true"
         android:onClick="radios"
+        android:text="@string/text_blue"
         />
 
     <View
         android:layout_width="match_parent"
         android:layout_height="@dimen/view"
-        android:background="@color/balck"
         android:layout_below="@id/rtbRed"
+        android:background="@color/balck"
         />
     <Spinner
         android:id="@+id/spn"
-        android:layout_below="@id/rtbRed"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@id/rtbRed"
         android:entries="@array/values"
         />
     <Switch
         android:id="@+id/swt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
         android:layout_alignParentBottom="true"
-        android:textOn="@string/text_start"
+        android:layout_centerInParent="true"
         android:textOff="@string/text_stop"
-
+        android:textOn="@string/text_start"
         />
     <Chronometer
         android:id="@+id/crono"
