--- a/U2_A_A10jesuslb/app/src/main/res/layout/activity_u2__a__a10jesuslb.xml
+++ b/U2_A_A10jesuslb/app/src/main/res/layout/activity_u2__a__a10jesuslb.xml
@@ -22,6 +22,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/txtEdi"
         android:text="@string/text_clear"
+        android:checked="false"
+
         />
 
     <Button
@@ -97,7 +99,6 @@
         />
     <Switch
         android:id="@+id/swt"
-        style="@style/Widget.AppCompat.CompoundButton.Switch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
