--- a/U4_01_Depuracion/app/src/main/res/layout/activity_u4_01__depuracion.xml
+++ b/U4_01_Depuracion/app/src/main/res/layout/activity_u4_01__depuracion.xml
@@ -4,20 +4,22 @@
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="net.iessanclemente.u4_coches.Vista_Texto">
+    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".U4_01_Depuracion">
 
-    <ListView
-        android:id="@+id/lstVista"
-        android:layout_width="wrap_content"
+    <EditText
+        android:id="@+id/etNumeros"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimaryDark"
+        android:inputType="number"
+
         />
-    <Spinner
-        android:id="@+id/spnLista"
+    <Button
+
+        android:id="@+id/btnEnvia"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimaryDark"
-        android:popupBackground="@color/colorPrimaryDark"
+        android:layout_below="@id/etNumeros"
+        android:text="@string/strBtn"
+        android:onClick="onClickEnvia"
         />
 </RelativeLayout>
