--- a/U4_Coches/app/src/main/res/layout/activity_u4__coches__principal.xml
+++ b/U4_Coches/app/src/main/res/layout/activity_u4__coches__principal.xml
@@ -23,6 +23,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/strRbtSobre"
+            android:checked="true"
             />
         <RadioButton
             android:id="@+id/rbtEngade"
