--- a/I-4B-a10jesuslb_Nova/app/src/main/res/layout/activity_i_4_b_a10jesuslb.xml
+++ b/I-4B-a10jesuslb_Nova/app/src/main/res/layout/activity_i_4_b_a10jesuslb.xml
@@ -6,6 +6,44 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".I_4B_a10jesuslb">
 
-    <TextView android:text="Hello World!" android:layout_width="wrap_content"
+   <Button
+       android:id="@+id/btnShow"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:text="@string/strShow"
+       android:onClick="onClickAmosa"
+       />
+
+    <Button
+        android:layout_alignParentRight="true"
+        android:id="@+id/btnFrag"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/strFrag"
+        android:onClick="onClickAmosa"
+        />
+
+    <TextView
+        android:id="@+id/tvAmosa"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:text="dummy"
+        />
+
+    <Button
+        android:id="@+id/btnEngade"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:layout_alignParentBottom="true"
+        android:text="@string/strEngade"
+        android:onClick="onClickAppend"
+        />
+
+    <EditText
+        android:layout_above="@id/btnEngade"
+        android:id="@+id/etEngade"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 </RelativeLayout>
