falta amosar ben no textview...

--- a/I-4B-a10jesuslb_Nova/app/src/main/res/layout/activity_i_4_b_a10jesuslb.xml
+++ b/I-4B-a10jesuslb_Nova/app/src/main/res/layout/activity_i_4_b_a10jesuslb.xml
@@ -45,5 +45,7 @@
         android:layout_above="@id/btnEngade"
         android:id="@+id/etEngade"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:hint="introduce os valores separados por comas i.e:\nvalor1,valor2..."
+        />
 </RelativeLayout>
